--- a/MvcProjeKampi/Views/Heading/Index.cshtml
+++ b/MvcProjeKampi/Views/Heading/Index.cshtml
@@ -98,12 +98,12 @@
                                 <span class="@color">@item.Category.CategoryName</span>
                             </td>
                             <td class="project-actions text-right">
-                                <a class="btn btn-primary btn-sm" href="#">
+                                <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingId">
                                     <i class="fas fa-folder">
                                     </i>
                                     Yazılar
                                 </a>
-                                <a class="btn btn-info btn-sm" href="#">
+                                <a class="btn btn-info btn-sm" href="/Heading/EditHeading/@item.HeadingId">
                                     <i class="fas fa-pencil-alt">
                                     </i>
                                     Düzenle
