--- a/MvcProjeKampi/Views/Heading/Index.cshtml
+++ b/MvcProjeKampi/Views/Heading/Index.cshtml
@@ -44,8 +44,11 @@
                             <th style="width: 20%">
                                 Başlık Adı
                             </th>
-                            <th style="width: 30%">
+                            <th style="width: 15%">
                                 Oluşturan Yazar
+                            </th>
+                            <th style="width: 10%">
+                                Durum
                             </th>
                             <th style="width: 8%" class="text-center">
                                 Kategori
@@ -94,6 +97,9 @@
                                     </li>
                                 </ul>
                             </td>
+                            <td>
+                            @item.HeadingStatus
+                            </td>
                             <td class="project-state">
                                 <span class="@color">@item.Category.CategoryName</span>
                             </td>
@@ -108,7 +114,7 @@
                                     </i>
                                     Düzenle
                                 </a>
-                                <a class="btn btn-danger btn-sm" href="#">
+                                <a class="btn btn-danger btn-sm" href="/Heading/DeleteHeading/@item.HeadingId">
                                     <i class="fas fa-trash">
                                     </i>
                                     Sil
