--- a/MvcProjeKampi/Views/Shared/_writerLayout.cshtml
+++ b/MvcProjeKampi/Views/Shared/_writerLayout.cshtml
@@ -41,7 +41,7 @@ to get the desired effect
             <a href="index3.html" class="brand-link">
                 <img src="~/AdminLTE-3.0.4/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">Mvc Yazar Paneli</span>
+                <span class="brand-text font-weight-light">Mvc Proje Kampı</span>
             </a>
             <!-- Sidebar -->
             <div class="sidebar">
@@ -58,21 +58,29 @@ to get the desired effect
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
-                        
-                            <li class="nav-item has-treeview ">
-                                <a href="/AdminCategory/Index/" class="nav-link">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
-                                    <p>
-                                        Profilim
-                                    </p>
-                                </a>
-                            </li>                        
+    with font-awesome or any other icon font library -->
+
+                        <li class="nav-item has-treeview ">
+                            <a href="/AdminCategory/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    Profilim
+                                </p>
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a href="/WriterPanel/MyHeading/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Başlıklarım
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/WriterPanel/AllHeading/" class="nav-link">
+                                <i class="nav-icon fas fa-list-alt"></i>
+                                <p>
+                                   Tüm Başlıklar
                                 </p>
                             </a>
                         </li>
@@ -83,8 +91,8 @@ to get the desired effect
                                     Yazılarım
                                 </p>
                             </a>
-                        </li>                        
-                        
+                        </li>
+
                         <li class="nav-item has-treeview">
                             <a href="/WriterPanelMessage/Sendbox/" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
@@ -94,7 +102,7 @@ to get the desired effect
                             </a>
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Default/Headings/" class="nav-link">
                                 <i class="nav-icon fas fa-book"></i>
                                 <p>
                                     Siteye Git
@@ -103,7 +111,7 @@ to get the desired effect
 
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Login/LogOut/" class="nav-link">
                                 <i class="nav-icon fas fa-apple-alt"></i>
                                 <p>
                                     Çıkış yap
