--- a/MvcProjeKampi/Views/WriterPanelContent/ToDoList.cshtml
+++ b/MvcProjeKampi/Views/WriterPanelContent/ToDoList.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_writerLayout.cshtml";
 }
 
-<p>#1 Profilim</p>
+<p><del>#1 Profilim</del></p>
 <p><del>#2 Tüm Başlıklarda Paging</del></p>
-<p>#3 Mesajlarda Session</p>
-<p>#4 Oturum Yönetiminin Mimariye Taşınması </p>
-<p>#5 Token Kulllanımı </p>
+<p><del>#3 Mesajlarda Session</del></p>
+<p><del>#4 Oturum Yönetiminin Mimariye Taşınması</del> </p>
+https://github.com/kadirdemirel/MVCProjeKampi/blob/master/MVCProjeKampi/Controllers/WriterPanelController.cs
