--- a/MvcProjeKampi/Views/Home/HomePage.cshtml
+++ b/MvcProjeKampi/Views/Home/HomePage.cshtml
@@ -56,7 +56,7 @@
                 </div>
                 <div id="word-mark">
                     <h1>
-                        <a href="/Home/HomePage/">Sahra</a>
+                        <a href="/Home/HomePage/">Sahra_Sözlük</a>
                     </h1>
                 </div>
             </div>
@@ -114,7 +114,7 @@
             <div class="banner-info text-uppercase">
                 <h6 data-aos="fade-right">Giriş</h6>
                 <h5 data-aos="fade-right">Merhaba, Sözlüğe Hoş Geldiniz</h5>
-                <h3 data-text="Sahra">Sahra</h3>
+                <h3 data-text="Sahra_Sözlük">Sahra_Sözlük</h3>
                 <div class="ban-buttons mt-3" data-aos="fade-right">
                     <a class="btn work scroll" href="#projects">Görseller</a>
                     <a class="btn work scroll active" href="#contact">Bize Ulaşın</a>
@@ -633,7 +633,7 @@
                 <div class="col-lg-4 footer-end-grid mt-md-0 mt-sm-5" data-aos="fade-up">
                     <h2>
                         <a href="index.html">
-                            <i class="fas fa-crosshairs"></i> Sahra
+                            <i class="fas fa-crosshairs"></i> Sahra Sözlük
                         </a>
                     </h2>
                 </div>
